--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 Django==2.2.13
-Pillow==6.2.0
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
+Pillow==8.1.0
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pytz==2018.5
+sqlparse==0.4.1
+waitress==1.4.4
+whitenoise==5.2.0
